--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
   datasource:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
-      password:
+      password: mysql
       url: jdbc:mysql://localhost:3306/cwzz?characterEncoding=UTF-8&useSSL=true
   jpa:
     database: mysql
